# gmp-pilot-app

./: .gitignore  pilot_file_inventory.csv  pilot_readiness_report.md  pilot_sop_to_system_matrix_v0_1.md  sop_document_register.csv  sop_process_map_summary.md
gmp-erp-system/backend/: Dockerfile  alembic.ini  pyproject.toml
gmp-erp-system/backend/alembic/versions/: 20260510_0001_foundation.py  20260510_0002_qc_reports.py  20260510_0003_fg_shipments.py  20260510_0004_inventory_counts.py  20260511_0005_optional_receipt_supplier.py  20260511_0006_qc_notifications.py  20260512_0007_production_requisitions.py  20260512_0008_receipt_line_origin.py  20260516_0009_qc_notification_scans.py  20260516_0010_lot_physical_address.py  20260516_0011_inventory_count_wave.py  20260517_0012_receipt_defects.py  20260517_0013_lot_initial_quantity.py
gmp-erp-system/backend/app/: main.py
gmp-erp-system/backend/app/api/: deps.py
gmp-erp-system/backend/app/core/: config.py  security.py
gmp-erp-system/backend/app/models/: __init__.py  audit.py  base.py  identity.py  inventory.py  master_data.py  quality.py
gmp-erp-system/backend/app/schemas/: identity.py  inventory.py  master_data.py  quality.py
gmp-erp-system/backend/app/services/: audit.py  internal_transfer_pdf.py  inventory.py  inventory_count_pdf.py  inventory_count_waves.py  lot_ledger_card_pdf.py  permissions.py  qc_notification_pdf.py  qc_notification_scans.py  (+7 more)
gmp-erp-system/backend/tests/: test_auth_permissions.py  test_master_data.py  test_production_requisitions.py  test_quality_workflow.py  test_receipt_lot_movements.py
(+162 files in other folders)
